samples/_failures_safe/1761551676_fd17b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e36bb49.c: In function ‘main’:
./samples/SAFE/__tmp_5e36bb49.c:141:5: error: expected declaration or statement at end of input
  141 |     }
      |     ^
